changed to integral of greens (cos-->sin)

--- a/CaDiffZeroFluxTest.ipynb
+++ b/CaDiffZeroFluxTest.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "source": [
     "# CONSTANTS\n",
     "L_x = 4     # X LENGTH (um)\n",
@@ -47,9 +47,9 @@
     "D = 220     # Diffusion coeff (um^2/sec)\n",
     "\n",
     "# Test\n",
-    "K = 10       # X eigenmodes\n",
-    "L = 10       # Y eigenmodes\n",
-    "M = 10       # Z eigenmodes\n",
+    "K = 15       # X eigenmodes\n",
+    "L = 15       # Y eigenmodes\n",
+    "M = 15       # Z eigenmodes\n",
     "t = .01   # time of interest (sec)"
    ],
    "outputs": [],
@@ -62,14 +62,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "def g_xk(x, t, x_o, t_o, k):\n",
     "    '''\n",
     "    Green's component for the x-direction\n",
     "    '''\n",
+    "    # NOTE: CHANGED COS TO SIN...\n",
     "\n",
-    "    g_xk = (2/L_x) * math.cos((k*math.pi*x_o)/L_x) * math.cos((k*math.pi*x)/L_x)\\\n",
+    "    g_xk = (2/L_x) * math.cos((k*math.pi*x_o)/L_x) * math.sin((k*math.pi*x)/L_x)\\\n",
     "        * math.exp(-D*(k*math.pi/L_x)**2*(t - t_o))\n",
     "\n",
     "    return g_xk"
@@ -84,14 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "def g_yl(y, t, y_o, t_o, l):\n",
     "    '''\n",
     "    Green's component for the y-direction\n",
     "    '''\n",
     "\n",
-    "    g_yl = (2/L_y) * math.cos((l*math.pi*y_o)/L_y) * math.cos((l*math.pi*y)/L_y)\\\n",
+    "    g_yl = (2/L_y) * math.cos((l*math.pi*y_o)/L_y) * math.sin((l*math.pi*y)/L_y)\\\n",
     "        * math.exp(-D*(l*math.pi/L_y)**2*(t - t_o))\n",
     "        \n",
     "    return g_yl"
@@ -106,14 +107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "def g_zm(z, t, z_o, t_o, m):\n",
     "    '''\n",
     "    Green's component for the z-direction\n",
     "    '''\n",
     "\n",
-    "    g_zm = (2/L_z) * math.cos((m*math.pi*z_o)/L_z) * math.cos((m*math.pi*z)/L_z)\\\n",
+    "    g_zm = (2/L_z) * math.cos((m*math.pi*z_o)/L_z) * math.sin((m*math.pi*z)/L_z)\\\n",
     "        * math.exp(-D*(m*math.pi/L_z)**2*(t - t_o))\n",
     "        \n",
     "    return g_zm"
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "source": [
     "def G(x, y, z, t, x_o, y_o, z_o, t_o, K, L, M):\n",
     "    '''\n",
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "source": [
     "def u(N_ca, x, y, z, t, x_o, y_o, z_o, t_o, K, L, M):\n",
     "    '''\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "source": [
     "u(N_ca, x, y, z, t, x_o, y_o, z_o, t_o, K, L, M)"
    ],
@@ -187,18 +188,18 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "8.02994902523004\n"
+      "0.0\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "42357.98110808846"
+       "0.0"
       ]
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 11
     }
    ],
    "metadata": {
