changed MCell output to concentration and changed analytical soln back from sin-->cos

--- a/CaDiffZeroFluxTest.ipynb
+++ b/CaDiffZeroFluxTest.ipynb
@@ -62,15 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "source": [
     "def g_xk(x, t, x_o, t_o, k):\n",
     "    '''\n",
     "    Green's component for the x-direction\n",
     "    '''\n",
-    "    # NOTE: CHANGED COS TO SIN...\n",
     "\n",
-    "    g_xk = (2/L_x) * math.cos((k*math.pi*x_o)/L_x) * math.sin((k*math.pi*x)/L_x)\\\n",
+    "    g_xk = (2/L_x) * math.cos((k*math.pi*x_o)/L_x) * math.cos((k*math.pi*x)/L_x)\\\n",
     "        * math.exp(-D*(k*math.pi/L_x)**2*(t - t_o))\n",
     "\n",
     "    return g_xk"
@@ -85,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "source": [
     "def g_yl(y, t, y_o, t_o, l):\n",
     "    '''\n",
     "    Green's component for the y-direction\n",
     "    '''\n",
     "\n",
-    "    g_yl = (2/L_y) * math.cos((l*math.pi*y_o)/L_y) * math.sin((l*math.pi*y)/L_y)\\\n",
+    "    g_yl = (2/L_y) * math.cos((l*math.pi*y_o)/L_y) * math.cos((l*math.pi*y)/L_y)\\\n",
     "        * math.exp(-D*(l*math.pi/L_y)**2*(t - t_o))\n",
     "        \n",
     "    return g_yl"
@@ -107,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "source": [
     "def g_zm(z, t, z_o, t_o, m):\n",
     "    '''\n",
     "    Green's component for the z-direction\n",
     "    '''\n",
     "\n",
-    "    g_zm = (2/L_z) * math.cos((m*math.pi*z_o)/L_z) * math.sin((m*math.pi*z)/L_z)\\\n",
+    "    g_zm = (2/L_z) * math.cos((m*math.pi*z_o)/L_z) * math.cos((m*math.pi*z)/L_z)\\\n",
     "        * math.exp(-D*(m*math.pi/L_z)**2*(t - t_o))\n",
     "        \n",
     "    return g_zm"
@@ -129,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "source": [
     "def G(x, y, z, t, x_o, y_o, z_o, t_o, K, L, M):\n",
     "    '''\n",
