Updated analytical solution with correct integral and eigenmode solution. updated MCell to plot output

--- a/CaDiffZeroFluxMCell.ipynb
+++ b/CaDiffZeroFluxMCell.ipynb
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "source": [
-    "def time_hist(dir,iter_num, plot=True):\n",
+    "def ca_snare_finder(dir,iter_num, plot=True):\n",
     "    '''\n",
     "    Calculates concentration of calcium in a box around the SNARE complexes\n",
-    "    over time for MCell simulation.\n",
+    "    at a given time for MCell simulation.\n",
     "\n",
     "    :param dir: MCell ASCII data location\n",
     "    :param iter_num: which iteration/time point to plot\n",
@@ -40,7 +40,7 @@
     "    :return: ca radial locations\n",
     "    '''   \n",
     "    \n",
-    "    # box dimensions (using refrac box dimensions) (TODO: find out if half len or full)\n",
+    "    # SNARE box dimensions (using refrac box dimensions) (TODO: find out if half len or full)\n",
     "    '''\n",
     "    x_len = 0.04\n",
     "    y_len = 0.035\n",
@@ -111,7 +111,7 @@
     "                        #print('x and z match:', ca_x, ca_y, ca_z)\n",
     "                        # check y direction\n",
     "                        if (ca_y >= y - y_len) & (ca_y <= y + y_len):\n",
-    "                            print(\"CA LOCATION:\\t\", ca_x, ca_y, ca_z)\n",
+    "                            #print(\"CA LOCATION:\\t\", ca_x, ca_y, ca_z)\n",
     "                            snare_ca_tot += 1\n",
     "            print(snare_ca_tot)\n",
     "\n",
@@ -126,6 +126,10 @@
     "        if snare_ca_tot != 0:\n",
     "            print(\"TIME POINT:\\t\", iter_num)\n",
     "            print(\"TOTAL NUMBER:\\t\\t\", snare_ca_tot)\n",
+    "            conc_ca = snare_ca_tot/ (x_len * y_len * z_len)\n",
+    "            print(\"TOTAL CONC (# ca/um^3):\\t\\t\", conc_ca)\n",
+    "            conc_ca_M = conc_ca / (1e-15 * 6.022e23)\n",
+    "            print(\"TOTAL CONC (M):\\t\", conc_ca_M)\n",
     "            #print(\"TOTAL CONC:\\t\\t\", (2*snare_ca_tot*pi*(rxn_rad**3))/3) # TODO: CHANGE TO REFLECT VOLUME OF INTEREST\n",
     "            print()\n",
     "            print()\n",
@@ -148,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "# plot for multiple time points\n",
     "mcell_viz_dir = \"/Users/margotwagner/ucsd/research/DiffusionModel/\" \\\n",
@@ -159,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "source": [
     "# get time points\n",
     "time_pts = [scene.split('.')[2] for scene in os.listdir(os.path.join(mcell_viz_dir, 'seed_00001'))]\n",
@@ -170,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "source": [
     "#sample points\n",
     "nums = [time_pts[i] for i in range(len(time_pts)) if i%1==0]\n",
@@ -189,27 +193,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "source": [
     "# For one timepoint\n",
-    "time_hist(mcell_viz_dir, '0310', plot=True)"
+    "ca_snare_finder(mcell_viz_dir, '0310', plot=True)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "CA LOCATION:\t 0.0650829834 0.0313544163 -0.23595472\n",
-      "CA LOCATION:\t 0.0626404125 0.0419475267 -0.244284771\n",
-      "CA LOCATION:\t 0.07660255469999999 -0.0340618543 -0.236022471\n",
-      "CA LOCATION:\t 0.0182360936 0.048024552699999994 -0.23551651899999998\n",
-      "CA LOCATION:\t 0.0470530383 -0.0441568119 -0.248975743\n",
-      "CA LOCATION:\t -0.0408666533 -0.0372269876 -0.24145429699999998\n",
-      "CA LOCATION:\t 0.00566840792 -0.0608093522 -0.24953476100000002\n",
-      "CA LOCATION:\t -0.0324616365 0.0225444275 -0.23860658399999998\n",
       "8\n",
       "TIME POINT:\t 0310\n",
       "TOTAL NUMBER:\t\t 8\n",
+      "TOTAL CONC (# ca/um^3):\t\t 142857.14285714284\n",
+      "TOTAL CONC (M):\t 0.00023722541158608903\n",
       "\n",
       "\n"
      ]
