added random walk solution and updated analytical solution

--- a/code/AnalyticalEigenmodeSolution.ipynb
+++ b/code/AnalyticalEigenmodeSolution.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,14 +85,14 @@
     "    #if k == 0:\n",
     "        #g_xk = 2 / L_x\n",
     "    \n",
-    "    eigenmode_x = math.cos((k * math.pi * x) / L_x) \n",
+    "    eigenmode_x = (2 / L_x) * math.cos((k * math.pi * x) / L_x) * math.exp(-D * ((k * math.pi) / L_x)**2 * (t - t_o))\n",
     "\n",
     "    return eigenmode_x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
