ran 100 runs of predivide postmultiply using factors of 2 and sqrt2

--- a/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation-variance.ipynb
+++ b/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation-variance.ipynb
@@ -1698,15 +1698,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Made new directory: ../../data/eme-validation/markov-eme/factorsqrt2/20230330_151651/\n"
+     ]
+    }
+   ],
    "source": [
     "# NUM_REPS = 1000\n",
     "NUM_REPS = 100 # skipping statistical data collection during debug\n",
     "\n",
     "# Make new directories by date_time for saving data (prevent overwrites)\n",
-    "MAKE_TIME_STAMPED_DIR = False\n",
+    "MAKE_TIME_STAMPED_DIR = True\n",
     "RUN_TYPE = 'eme-baseline'\n",
     "\n",
     "if MAKE_TIME_STAMPED_DIR:\n",
@@ -1722,7 +1730,7 @@
     "        print('Made new directory:', DIR_PATH_RW)\n",
     "        \n",
     "    elif RUN_TYPE == 'eme-baseline':\n",
-    "        DIR_PATH_EME = r'../../data/eme-validation/markov-eme/{}/'.format(time_stamp) \n",
+    "        DIR_PATH_EME = r'../../data/eme-validation/markov-eme/factorsqrt2/{}/'.format(time_stamp) \n",
     "        os.mkdir(DIR_PATH_EME)\n",
     "        print('Made new directory:', DIR_PATH_EME)\n",
     "        \n",
@@ -1787,25 +1795,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RUNNING SIMULATION 0\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "eigenmode_markov_simulation() got an unexpected keyword argument 'eigenmode_transition_probability'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/wp/3f0wwp4n2yzg421rx1jgph980000gn/T/ipykernel_37959/453562159.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0;31m# run Markov model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         n_per_eigenmode_state = eigenmode_markov_simulation(\n\u001b[0m\u001b[1;32m     31\u001b[0m             \u001b[0mn_eigenmodes\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mn_spatial_locs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m             \u001b[0minit_cond\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0minit_n_positive_modes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minit_n_negative_modes\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: eigenmode_markov_simulation() got an unexpected keyword argument 'eigenmode_transition_probability'"
+      "RUNNING SIMULATION 0\n",
+      "RUNNING SIMULATION 2\n",
+      "RUNNING SIMULATION 4\n",
+      "RUNNING SIMULATION 6\n",
+      "RUNNING SIMULATION 8\n",
+      "RUNNING SIMULATION 10\n",
+      "RUNNING SIMULATION 12\n",
+      "RUNNING SIMULATION 14\n",
+      "RUNNING SIMULATION 16\n",
+      "RUNNING SIMULATION 18\n",
+      "RUNNING SIMULATION 20\n",
+      "RUNNING SIMULATION 22\n",
+      "RUNNING SIMULATION 24\n",
+      "RUNNING SIMULATION 26\n",
+      "RUNNING SIMULATION 28\n",
+      "RUNNING SIMULATION 30\n",
+      "RUNNING SIMULATION 32\n",
+      "RUNNING SIMULATION 34\n",
+      "RUNNING SIMULATION 36\n",
+      "RUNNING SIMULATION 38\n",
+      "RUNNING SIMULATION 40\n",
+      "RUNNING SIMULATION 42\n",
+      "RUNNING SIMULATION 44\n",
+      "RUNNING SIMULATION 46\n",
+      "RUNNING SIMULATION 48\n",
+      "RUNNING SIMULATION 50\n",
+      "RUNNING SIMULATION 52\n",
+      "RUNNING SIMULATION 54\n",
+      "RUNNING SIMULATION 56\n",
+      "RUNNING SIMULATION 58\n",
+      "RUNNING SIMULATION 60\n",
+      "RUNNING SIMULATION 62\n",
+      "RUNNING SIMULATION 64\n",
+      "RUNNING SIMULATION 66\n",
+      "RUNNING SIMULATION 68\n",
+      "RUNNING SIMULATION 70\n",
+      "RUNNING SIMULATION 72\n",
+      "RUNNING SIMULATION 74\n",
+      "RUNNING SIMULATION 76\n",
+      "RUNNING SIMULATION 78\n",
+      "RUNNING SIMULATION 80\n",
+      "RUNNING SIMULATION 82\n",
+      "RUNNING SIMULATION 84\n",
+      "RUNNING SIMULATION 86\n",
+      "RUNNING SIMULATION 88\n",
+      "RUNNING SIMULATION 90\n",
+      "RUNNING SIMULATION 92\n",
+      "RUNNING SIMULATION 94\n",
+      "RUNNING SIMULATION 96\n",
+      "RUNNING SIMULATION 98\n"
      ]
     }
    ],
@@ -1846,13 +1892,13 @@
     "            n_particles=n_particles,\n",
     "            dt=dt,\n",
     "            n_time_pts=n_time_pts,\n",
-    "            prescale=1/(np.sqrt(2)),\n",
+    "            prescale=1/np.sqrt(2),\n",
     "            plot=False,\n",
     "            binomial_sampling=(RUN_TYPE == 'mcmc-eme')\n",
     "        )\n",
     "\n",
     "        # inverse transform; convert eigenmode representation to node representation\n",
-    "        node_vals_from_modes = eigenmodes_to_spatial_nodes(n_per_eigenmode_state=n_per_eigenmode_state, eigenvectors=eigenvectors, postscale=(np.sqrt(2)),print_output=False) / n_particles\n",
+    "        node_vals_from_modes = eigenmodes_to_spatial_nodes(n_per_eigenmode_state=n_per_eigenmode_state, eigenvectors=eigenvectors, postscale=np.sqrt(2),print_output=False) / n_particles\n",
     "        \n",
     "        # save output\n",
     "        if MAKE_TIME_STAMPED_DIR:\n",
@@ -1872,10 +1918,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "transition_matrix_maker()\n",
-    "eigenmode_markov_simulation("
-   ]
+   "source": []
   }
  ],
  "metadata": {
