refactored eme-random-walk-1d-validation.ipynb code into classes and scripts

--- a/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation.ipynb
+++ b/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation.ipynb
@@ -34,7 +34,7 @@
     "from typing import Union, Tuple\n",
     "import sys\n",
     "sys.path.insert(0, '../../src/')\n",
-    "import random_walk as rw"
+    "import RandomWalk as rw"
    ]
   },
   {
