--- a/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation-variance.ipynb
+++ b/notebooks/markov-eigenmode-validation/eme-random-walk-1d-validation-variance.ipynb
@@ -76,7 +76,11 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "IPython.OutputArea.prototype._should_scroll = function(lines) {\n    return false;\n}\n",
+      "application/javascript": [
+       "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+       "    return false;\n",
+       "}\n"
+      ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -2387,7 +2391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
